# hermes-home-bridge

./: .env.example  .gitignore  README.ko.md  README.md  pyproject.toml
docs/: ac_control_integration_plan.md
skills/hermes_home_bridge/: SKILL.md
src/: bridge.py  serial_bridge.py
